disable lightweight access_token, which is default now for admin-cli
we need a regular token to check our custom mapper!